# wholfin-unfolded-circle-integration

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
git-hooks/: pre-push
lib/: ucapi-0.6.0-py3-none-any.whl
uc_intg_wholphin/: __init__.py  __main__.py  browser.py  config.py  const.py  device.py  driver.py  media_player.py  remote.py  sensor.py  setup_flow.py
